[project]
name = "VesuviusQA"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "langchain-chroma>=0.2.3",
    "langchain-community>=0.3.23",
    "langchain-huggingface>=0.2.0",
    "langchain-openai>=0.3.18",
    "ruff>=0.11.7",
    "transformers>=4.51.3",
]
